@@ -273,6 +273,10 @@ textarea[readonly] {
 	background-color:	#ddd;
 }
 
+textarea {
+	display:		block;
+}
+
 /*--------------------------------------------------------------------
 ●編集画面
 ---------------------------------------------------------------------*/
@@ -1225,9 +1229,6 @@ ul.menu {
 }
 
 /* フォーム要素 */
-table.blog-setting textarea {
-	display:		block;
-}
 .sp .main input,
 .sp .main textarea {
 	max-width:		100%;
